--- a/index.html
+++ b/index.html
@@ -13,11 +13,11 @@
     </header>
     <nav>
         <ul>
-            <li><a href="index.php" class="nav-item">Home</a></li>
-            <li><a href="about_us.php" class="nav-item">About Us</a></li>
-            <li><a href="php_info.php" class="nav-item">PHP Info</a></li>
-            <li><a href="contact_us.php" class="nav-item">Contact Us</a></li>
-            <li><a href="module1_foundations.php" class="nav-item">Module 1 Foundations</a></li>
+            <li><a href="index.html" class="nav-item">Home</a></li>
+            <li><a href="about_us.html" class="nav-item">About Us</a></li>
+            <li><a href="php_info.html" class="nav-item">PHP Info</a></li>
+            <li><a href="contact_us.html" class="nav-item">Contact Us</a></li>
+            <li><a href="module1_foundations.html" class="nav-item">Module 1 Foundations</a></li>
         </ul>
     </nav>
     <div class="main-content">
