--- a/about_us.html
+++ b/about_us.html
@@ -10,10 +10,10 @@
     <?php include 'header.php'; ?>
     <div class="main-content">
         <h2>About Us</h2>
-        <?php
-            echo "<p>Aspire Electronics is a fictional company that provides high-quality electronics at competitive prices.</p>";
-            echo "<p>Our mission is to offer the latest technology and make it accessible to everyone, enhancing their lifestyle and productivity.</p>";
-        ?>
+        
+            "<p>Aspire Electronics is a fictional company that provides high-quality electronics at competitive prices.</p>";
+         "<p>Our mission is to offer the latest technology and make it accessible to everyone, enhancing their lifestyle and productivity.</p>";
+        
     </div>
     <?php include 'footer.php'; ?>
 </body>
