--- a/contact_us.html
+++ b/contact_us.html
@@ -6,15 +6,13 @@
     <link rel="stylesheet" href="style.css" type="text/css" />
 </head>
 <body>
-    <?php include 'header.php'; ?>
+    <?php include 'header.html'; ?>
     <div class="main-content">
         <h2>Contact Us</h2>
-        <?php
-            echo "<p>Contact us at Aspire Electronics for any inquiries!</p>";
-            echo "<p>Email: support@aspireelectronics.com | Phone: (123) 456-7890</p>";
-        ?>
+         "<p>Contact us at Aspire Electronics for any inquiries!</p>";
+         "<p>Email: support@aspireelectronics.com | Phone: (123) 456-7890</p>";
     </div>
-    <?php include 'footer.php'; ?>
+    <?php include 'footer.html'; ?>
 </body>
 </html>
 
