--- a/about_us.html
+++ b/about_us.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="style.css" type="text/css" />
 </head>
 <body>
-    <?php include 'header.php'; ?>
+    <?php include 'header.html'; ?>
     <div class="main-content">
         <h2>About Us</h2>
         
