--- a/module1_foundations.html
+++ b/module1_foundations.html
@@ -7,11 +7,11 @@
     <link rel="stylesheet" href="style.css" type="text/css" />
 </head>
 <body>
-    <?php include 'header.php'; ?>
+    <?php include 'header.html'; ?>
     <div class="main-content">
         <h2>Module 1: Week 1 Foundations</h2>
         <p>This page will be updated with Week 1 Foundations assignment details.</p>
     </div>
-    <?php include 'footer.php'; ?>
+    <?php include 'footer.html'; ?>
 </body>
 </html>
