--- a/php_info.html
+++ b/php_info.html
@@ -6,11 +6,11 @@
     <link rel="stylesheet" href="style.css" type="text/css" />
 </head>
 <body>
-    <?php include 'header.php'; ?>
+    <?php include 'header.html'; ?>
     <div class="main-content">
         <h2>PHP Info</h2>
         <?php phpinfo(); ?>
     </div>
-    <?php include 'footer.php'; ?>
+    <?php include 'footer.html'; ?>
 </body>
 </html>
