--- a/contact_us.html
+++ b/contact_us.html
@@ -9,8 +9,8 @@
     <?php include 'header.html'; ?>
     <div class="main-content">
         <h2>Contact Us</h2>
-         "<p>Contact us at Aspire Electronics for any inquiries!</p>";
-         "<p>Email: support@aspireelectronics.com | Phone: (123) 456-7890</p>";
+         <p>Contact us at Aspire Electronics for any inquiries!</p>;
+         <p>Email: support@aspireelectronics.com | Phone: (123) 456-7890</p>;
     </div>
     <?php include 'footer.html'; ?>
 </body>
