--- a/about_us.html
+++ b/about_us.html
@@ -15,6 +15,6 @@
          <p>Our mission is to offer the latest technology and make it accessible to everyone, enhancing their lifestyle and productivity.</p>;
         
     </div>
-    <?php include 'footer.php'; ?>
+    <?php include 'footer.html'; ?>
 </body>
 </html>
