--- a/module1_foundations.html
+++ b/module1_foundations.html
@@ -7,11 +7,28 @@
     <link rel="stylesheet" href="style.css" type="text/css" />
 </head>
 <body>
-    <?php include 'header.html'; ?>
+    <header>
+        <h1>Aspire Electronics</h1>
+    </header>
+
+    <nav>
+        <ul>
+            <li><a href="index.html" class="nav-item">Home</a></li>
+            <li><a href="about_us.html" class="nav-item">About Us</a></li>
+            <li><a href="php_info.html" class="nav-item">PHP Info</a></li>
+            <li><a href="contact_us.html" class="nav-item">Contact Us</a></li>
+            <li><a href="module1_foundations.html" class="nav-item">Module 1 Foundations</a></li>
+        </ul>
+    </nav>
+
     <div class="main-content">
-        <h2>Module 1: Week 1 Foundations</h2>
-        <p>This page will be updated with Week 1 Foundations assignment details.</p>
+        <h2>Module 1 Foundations</h2>
+        <p>This is the content for the Module 1 Foundations assignment.</p>
     </div>
-    <?php include 'footer.html'; ?>
+
+    <footer>
+        <p>&copy; 2024 Aspire Electronics</p>
+    </footer>
 </body>
 </html>
+
