--- a/contact_us.html
+++ b/contact_us.html
@@ -6,13 +6,31 @@
     <link rel="stylesheet" href="style.css" type="text/css" />
 </head>
 <body>
-    <?php include 'header.html'; ?>
+    <header>
+        <h1>Aspire Electronics</h1>
+    </header>
+
+    <nav>
+        <ul>
+            <li><a href="index.html" class="nav-item">Home</a></li>
+            <li><a href="about_us.html" class="nav-item">About Us</a></li>
+            <li><a href="php_info.html" class="nav-item">PHP Info</a></li>
+            <li><a href="contact_us.html" class="nav-item">Contact Us</a></li>
+            <li><a href="module1_foundations.html" class="nav-item">Module 1 Foundations</a></li>
+        </ul>
+    </nav>
+
     <div class="main-content">
         <h2>Contact Us</h2>
-         <p>Contact us at Aspire Electronics for any inquiries!</p>;
-         <p>Email: support@aspireelectronics.com | Phone: (123) 456-7890</p>;
+        <p>For any inquiries, please reach out to us at:</p>
+        <p>Email: support@aspireelectronics.com</p>
+        <p>Phone: +1-555-555-1234</p>
     </div>
-    <?php include 'footer.html'; ?>
+
+    <footer>
+        <p>&copy; 2024 Aspire Electronics</p>
+    </footer>
 </body>
 </html>
+
 
