--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <header>
         <h1>Aspire Electronics</h1>
     </header>
+    
     <nav>
         <ul>
             <li><a href="index.html" class="nav-item">Home</a></li>
@@ -20,6 +21,7 @@
             <li><a href="module1_foundations.html" class="nav-item">Module 1 Foundations</a></li>
         </ul>
     </nav>
+
     <div class="main-content">
         <h2>Welcome to Aspire Electronics</h2>
         <p>Explore our wide range of quality electronics designed for all your needs.</p>
@@ -35,8 +37,9 @@
             <li>Module 8: Week 8 CMS Database</li>
         </ul>
     </div>
+
     <footer>
-        <p>&copy; <?php echo date("Y"); ?> Aspire Electronics. Last modified: <?php echo date("F d Y H:i:s.", filemtime(__FILE__)); ?></p>
+        <p>&copy; 2024 Aspire Electronics. Last modified: November 6, 2024</p>
         <div class="validation-icons">
             <a href="https://validator.w3.org/check?uri=referer">
                 <img src="https://www.w3.org/Icons/valid-xhtml10" alt="Valid XHTML 1.0 Strict" />
@@ -48,3 +51,4 @@
     </footer>
 </body>
 </html>
+
