--- a/php_info.html
+++ b/php_info.html
@@ -6,11 +6,30 @@
     <link rel="stylesheet" href="style.css" type="text/css" />
 </head>
 <body>
-    <?php include 'header.html'; ?>
+    <header>
+        <h1>Aspire Electronics</h1>
+    </header>
+
+    <nav>
+        <ul>
+            <li><a href="index.html" class="nav-item">Home</a></li>
+            <li><a href="about_us.html" class="nav-item">About Us</a></li>
+            <li><a href="php_info.html" class="nav-item">PHP Info</a></li>
+            <li><a href="contact_us.html" class="nav-item">Contact Us</a></li>
+            <li><a href="module1_foundations.html" class="nav-item">Module 1 Foundations</a></li>
+        </ul>
+    </nav>
+
     <div class="main-content">
-        <h2>PHP Info</h2>
-        <?php phpinfo(); ?>
+        <h2>PHP Information</h2>
+        <p>PHP, or "Hypertext Preprocessor," is a popular server-side scripting language designed specifically for web development. It is widely used to create dynamic and interactive web pages, allowing websites to perform tasks such as data processing, managing forms, and interacting with databases.</p>
+        <p>PHP is integrated with HTML, and when used on a server, it processes code to generate HTML that is displayed in a web browser. With PHP, developers can build interactive and data-driven websites, making it a foundational language for many content management systems (CMS) and e-commerce websites.</p>
+        <p>For more information on PHP, visit the official <a href="https://www.php.net" target="_blank">PHP website</a>.</p>
     </div>
-    <?php include 'footer.html'; ?>
+
+    <footer>
+        <p>&copy; 2024 Aspire Electronics</p>
+    </footer>
 </body>
 </html>
+
