--- a/php_info.html
+++ b/php_info.html
@@ -3,33 +3,49 @@
 <head>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
     <title>PHP Info - Aspire Electronics</title>
-    <link rel="stylesheet" href="style.css" type="text/css" />
 </head>
 <body>
+    <!-- Header Section -->
     <header>
-        <h1>Aspire Electronics</h1>
+        <h1>Welcome to Aspire Electronics</h1>
+        <p>Your trusted source for electronic solutions</p>
     </header>
 
+    <!-- Navigation Menu -->
     <nav>
         <ul>
-            <li><a href="index.html" class="nav-item">Home</a></li>
-            <li><a href="about_us.html" class="nav-item">About Us</a></li>
-            <li><a href="php_info.html" class="nav-item">PHP Info</a></li>
-            <li><a href="contact_us.html" class="nav-item">Contact Us</a></li>
-            <li><a href="module1_foundations.html" class="nav-item">Module 1 Foundations</a></li>
+            <li><a href="index.html">Home</a></li>
+            <li><a href="about_us.html">About Us</a></li>
+            <li><a href="php_info.html">PHP Info</a></li>
+            <li><a href="contact_us.html">Contact Us</a></li>
+            <li><a href="module1_foundations.html">Module 1 Foundations</a></li>
         </ul>
     </nav>
 
-    <div class="main-content">
-        <h2>PHP Information</h2>
-        <p>PHP, or "Hypertext Preprocessor," is a popular server-side scripting language designed specifically for web development. It is widely used to create dynamic and interactive web pages, allowing websites to perform tasks such as data processing, managing forms, and interacting with databases.</p>
-        <p>PHP is integrated with HTML, and when used on a server, it processes code to generate HTML that is displayed in a web browser. With PHP, developers can build interactive and data-driven websites, making it a foundational language for many content management systems (CMS) and e-commerce websites.</p>
-        <p>For more information on PHP, visit the official <a href="https://www.php.net" target="_blank">PHP website</a>.</p>
+    <!-- Main Content Area -->
+    <div>
+        <h2>Understanding PHP Info</h2>
+        <p>The PHP Info page provides comprehensive information about the PHP configuration on the server, such as:</p>
+        <ul>
+            <li><strong>PHP Version:</strong> The current version of PHP installed on the server.</li>
+            <li><strong>Loaded Extensions:</strong> Information on enabled PHP extensions, such as MySQL, cURL, GD, and more.</li>
+            <li><strong>Server Information:</strong> Details on the server environment, including Apache or Nginx configurations.</li>
+            <li><strong>Configuration Directives:</strong> Key PHP settings that define how PHP behaves, such as memory limits and error reporting levels.</li>
+            <li><strong>Environment Variables:</strong> Information on system and environment variables used by PHP.</li>
+        </ul>
+        <p>To view actual PHP configuration details on a server, the PHP function <code>phpinfo()</code> is used on a PHP page. Since this page is HTML-only, no real-time PHP configuration can be displayed here.</p>
+        <p>For more technical details about PHP configuration, visit the official <a href="https://www.php.net/manual/en/function.phpinfo.php" target="_blank">PHP Info Documentation</a>.</p>
     </div>
 
+    <!-- Footer Section -->
     <footer>
-        <p>&copy; 2024 Aspire Electronics</p>
+        <p>&copy; 2024 Aspire Electronics | All rights reserved</p>
+        <p><a href="privacy_policy.html">Privacy Policy</a> | <a href="terms_of_service.html">Terms of Service</a></p>
+        <p>Follow us on:
+            <a href="https://www.facebook.com/AspireElectronics" target="_blank">Facebook</a> |
+            <a href="https://www.twitter.com/AspireElectronics" target="_blank">Twitter</a> |
+            <a href="https://www.instagram.com/AspireElectronics" target="_blank">Instagram</a>
+        </p>
     </footer>
 </body>
 </html>
-
